last version stage 1

--- a/info.html
+++ b/info.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
    <head>
 	<title>Network Application</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/friends.css"/>
 	<link rel="stylesheet" type="text/css" href="./css/send.css"/>
 	<link rel="stylesheet" type="text/css" href="./css/message.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/signin.css"/>	
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"/>
 	<script src="./js/nav.js"></script>
 	<script src="./js/slider.js"></script>
@@ -36,14 +37,22 @@
 		<h1>PAGES</h1>
 		<ul class="info_ul">
 		  <li><a href="./index.php"> Login Page</a></li> 
-		  <li><form action="./pages/userpage.php" method="post">
-			   <input name="idUser" value="2" type="hidden">
-			   <input type="submit" value="General Page"
-			   style="background: none repeat scroll 0% 0% transparent; border: medium none; font-size: 18px; margin-left: -8px; text-decoration: underline;"/></form></li>
 		</ul>
 		<span> if the login page doesn't appear click on </span><i class="fa fa-power-off"></i><span> on the next displayed page.</span>
 		
 		<br/><br/>
+		
+		<h1>XHTML</h1>
+		<ul class="info_ul">
+			<li><a href="./xhtml/inbox.xhtml" >inbox.xhtml</a></li>
+			<li><a href="./xhtml/friends.xhtml" >friends.xhtml</a></li>
+			<li><a href="./xhtml/index.xhtml" >index.xhtml</a></li>
+			<li><a href="./xhtml/news.xhtml" >news.xhtml</a></li>
+			<li><a href="./xhtml/send.xhtml" >send.xhtml</a></li>	
+			<li><a href="./xhtml/settings.xhtml">settings.xhtml</a></li>
+		</ul>
+		<span> Only HTML5 errors remain for the W3C Validator. </span>
+		<br/>
 		
 		<h1> EMBEDDED HTML</h1>
 		
@@ -58,7 +67,8 @@
 			   style="background: none repeat scroll 0% 0% transparent; border: medium none; font-size: 18px; margin-left: -8px; text-decoration: underline;"/></form></li>
 		
 		</ul>
-		
+		<span> These pages are displayed without CSS. </span>
+		<span> To see them correctly you could go to the website (link above).</span>
 		<br/>
 		
 		<h1>CSS</h1>
@@ -85,7 +95,7 @@
 			<li><a href="./js/message.js" target="frame">message.js</a></li>
 		</ul>
 		<br/>
-		
+				
 		<h1>License</h1>
 		     <ul class="info_ul">
 			<li><a href="./font/Bearpaw%20License.txt" target="frame">Font Bearpaw License</a></li>
